web/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-hello-world
  name: nginx-hello-world
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-hello-world
  sessionAffinity: None
  type: ClusterIP
