web/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  # hostname: nginxtest.apps.marble.ccs.ornl.gov
  port:
    targetPort: nginx
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-hello-world
    weight: 100
  wildcardPolicy: None
